--- a/src/ZectranetBundle/Resources/views/QnAForum.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAForum.html.twig
@@ -123,7 +123,7 @@
 
                                 <div class="form-group">
                                     <label class="control-label">Message:</label>
-                                    <textarea name="message" class="form-control" rows="5" required></textarea>
+                                    <textarea style="resize: vertical;" name="message" class="form-control" rows="5" required></textarea>
                                 </div>
                             </div>
                         </div>
