--- a/src/ZectranetBundle/Resources/views/headerForumSettings.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForumSettings.html.twig
@@ -223,7 +223,7 @@
                     <p>
                         <label>
                             Subheader Description: <br/>
-                            <textarea ng-model="subheader.description" cols="30" rows="5"></textarea>
+                            <textarea style="resize: vertical;" ng-model="subheader.description" cols="30" rows="5"></textarea>
                         </label>
                     </p>
                     <p>
