--- a/src/ZectranetBundle/Resources/views/headerForumThread.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForumThread.html.twig
@@ -68,7 +68,7 @@
         </div>
         <form class="panel-footer" action="{{ path('zectranet_add_post_header_forum_thread', { 'thread_id': thread.id }) }}" method="post">
             <div class="input-group">
-                <textarea name="message" class="form-control" rows="6"></textarea>
+                <textarea style="resize: vertical;" name="message" class="form-control" rows="6"></textarea>
                 <div class="input-group-addon" style="padding: 0;">
                     <button type="submit" class="btn btn-default btn-primary" style="width: 132px; height: 132px;">
                         Post
