--- a/src/ZectranetBundle/Resources/views/taskAdd.html.twig
+++ b/src/ZectranetBundle/Resources/views/taskAdd.html.twig
@@ -50,7 +50,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="add_task_description" class="control-label">Task Description:</label>
-                                    <textarea id="add_task_description" class="form-control" name="description" ng-model="taskModel.description" required style="height: 100px;"></textarea>
+                                    <textarea style="resize: vertical;" id="add_task_description" class="form-control" name="description" ng-model="taskModel.description" required style="height: 100px;"></textarea>
                                 </div>
                                 <div class="form-group">
                                     <button type="button" class="btn btn-primary" ng-click="addTask(taskModel)">Add</button>
