--- a/src/ZectranetBundle/Resources/views/QnAThread.html.twig
+++ b/src/ZectranetBundle/Resources/views/QnAThread.html.twig
@@ -139,7 +139,7 @@
     <div class="col-md-12">
         <form class="posts" action="{{ path('zectranet_QnA_add_post', { 'thread_id': thread.id }) }}" method="post">
             <div class="input-group">
-                <textarea name="message" class="form-control" rows="3"></textarea>
+                <textarea style="resize: vertical;" name="message" class="form-control" rows="3"></textarea>
                 <div class="input-group-addon" style="padding: 0;">
                     <button type="submit" class="btn btn-default btn-primary" style="width: 72px; height: 72px;">
                         Answer
