--- a/src/ZectranetBundle/Resources/views/headerForumSubHeader.html.twig
+++ b/src/ZectranetBundle/Resources/views/headerForumSubHeader.html.twig
@@ -111,7 +111,7 @@
                                     <label class="control-label">
                                         Message:
                                     </label>
-                                    <textarea name="message" class="form-control" rows="12" required></textarea>
+                                    <textarea style="resize: vertical;" name="message" class="form-control" rows="12" required></textarea>
                                 </div>
                             </div>
                         </div>
