--- a/src/ZectranetBundle/Resources/views/projectSettings.html.twig
+++ b/src/ZectranetBundle/Resources/views/projectSettings.html.twig
@@ -55,7 +55,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <textarea class="form-control"  style="height: 64px;" placeholder="Project description">{{ project.description }}</textarea>
+                                    <textarea class="form-control"  style="resize: vertical;height: 64px;" placeholder="Project description">{{ project.description }}</textarea>
                                     <button type="button" class="form-control btn-success" ng-click="changeVisibleState(projectVisible);">Save</button>
                                 </div>
                             </div>
