--- a/src/ZectranetBundle/Resources/views/taskAddSub.html.twig
+++ b/src/ZectranetBundle/Resources/views/taskAddSub.html.twig
@@ -51,7 +51,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="add_subtask_description" class="control-label">Task Description:</label>
-                                    <textarea id="add_subtask_description" class="form-control" ng-model="subtask.description" name="description" required></textarea>
+                                    <textarea style="resize: vertical;" id="add_subtask_description" class="form-control" ng-model="subtask.description" name="description" required></textarea>
                                 </div>
                                 <div class="form-group">
                                     <a ng-click="addSubTask(subtask)" class="btn btn-primary">Add</a>
