--- a/web/bundles/zectranet/css/mainv_001.css
+++ b/web/bundles/zectranet/css/mainv_001.css
@@ -128,6 +128,12 @@
     margin-top: -20px;
 }
 
+.header-forum-header{
+    font-family: 'PT Sans Narrow', sans-serif;
+    font-weight: 600;
+    margin-top: 0px;
+}
+
 .topic-header-border{
     -webkit-border-top-left-radius: 5px;
     -webkit-border-top-right-radius: 5px;
@@ -183,4 +189,25 @@ div[data-role="editor-toolbar"] {
     border-style: solid;
     border-color: #F2F2F2;
     border-radius: 3px;
+}.forum-border{
+     border-width: 1px;
+     border-style: solid;
+     border-color: #F2F2F2;
+     border-radius: 3px;
+ }
+.forum-border-topradius{
+    -webkit-border-top-left-radius: 5px;
+    -webkit-border-top-right-radius: 5px;
+    -moz-border-radius-topleft: 5px;
+    -moz-border-radius-topright: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #F2F2F2;
+}
+.forum-shadow{
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.08);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.08);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.08);
 }
