--- a/src/ZectranetBundle/Resources/views/index.html.twig
+++ b/src/ZectranetBundle/Resources/views/index.html.twig
@@ -55,7 +55,7 @@
 						</a>
                         {% if HOProjectsCount | length > 0 %}
                             <a href="{{ path('zectranet_show_office', {'office_id': homeOffice.id }) }}" class="collapsible-href">
-                                <i class="fa fa-arrow-left fa-fw"></i>
+                                <i class="fa fa-arrow-down fa-fw"></i>
                             </a>
                         {% endif %}
                         <div class="clearfix"></div>
@@ -136,7 +136,7 @@
                             </a>
                             {% if office.projects | length > 0 %}
                                 <a href="#" class="collapsible-href">
-                                    <i class="fa fa-arrow-left fa-fw"></i>
+                                    <i class="fa fa-arrow-down fa-fw"></i>
                                 </a>
                             {% endif %}
                             <div class="clearfix"></div>
@@ -166,7 +166,7 @@
                             </a>
                             {% if office.projects | length > 0 %}
                                 <a href="#" class="collapsible-href">
-                                    <i class="fa fa-arrow-left fa-fw"></i>
+                                    <i class="fa fa-arrow-down fa-fw"></i>
                                 </a>
                             {% endif %}
                             <div class="clearfix"></div>
