--- a/src/ZectranetBundle/Resources/views/index.html.twig
+++ b/src/ZectranetBundle/Resources/views/index.html.twig
@@ -101,15 +101,17 @@
                                             </a>
                                         </li>
                                     {% endfor %}
-                                    {% for project in homeOffice.headerForums if project.users | length > 1 %}
+
+                                    {% for project in app.user.connectedHFForums if project.users | length > 1 %}
                                         <li>
-                                            <a href="{{ path('zectranet_show_project', {'project_id': project.id }) }}">
+                                            <a href="{{ path('zectranet_show_header_forum', {'project_id': project.id }) }}">
                                                 <i class="fa fa-briefcase fa-fw"></i>
                                                 {{ project.name }}
                                             </a>
                                         </li>
                                     {% endfor %}
-                                    {% for project in homeOffice.QnAForums if project.users | length > 1 %}
+
+                                    {% for project in app.user.connectedQnAForums if project.users | length > 1 %}
                                         <li>
                                             <a href="{{ path('zectranet_show_QnA_forum', {'project_id': project.id }) }}">
                                                 <i class="fa fa-briefcase fa-fw"></i>
